# online_university

./: .flake8  .gitignore  README.md  pyproject.toml
account/auth/: apps.py
account/auth/admin/: user.py
account/auth/helper/: type_hints.py
account/auth/manager/: user.py
account/auth/models/: user.py
account/auth/queryset/: user.py
account/auth/validator/: user.py
account/auth/validators/: __init__.py  user.py
account/otp/: apps.py
account/otp/admin/: token.py
account/otp/helper/: __init__.py  errors.py  exceptions.py  text_choices.py  typings.py
account/otp/models/: __init__.py  token.py
account/otp/validators/: __init__.py  text_choices.py
config/log/: config.toml
docs/database/: create_db.sql  diagram.dbml
elearning/: apps.py
elearning/warehouse/: apps.py
elearning/warehouse/admin/: __init__.py  answer.py  bundle.py  gallery.py  product.py  product_media.py  question.py  question_help.py
elearning/warehouse/forms/: __init__.py  product.py
elearning/warehouse/helper/: __init__.py  consts.py  exceptions.py  type_hints.py
elearning/warehouse/models/: __init__.py  answer.py  bundle.py  gallery.py  product.py  product_media.py  question.py  question_help.py
kernel/: settings.py  urls.py
painless/dynamic_settings/: apps.py  config_parser.py  debug_extensions.py  descriptor.py  enums.py  exceptions.py  funcs.py  middlewares.py  settings_backup.py
painless/helper/: exceptions.py  typing.py
painless/models/: abstract.py
painless/models/mixins/: __init__.py  (+1 more)
painless/utils/: converters.py  funcs.py
shop/basket/: apps.py
(+52 files in other folders)
