[tool.poetry]
name = "ou"
version = "0.0.0"
description = ""
authors = ["Ghazale Mirbagheri <ghazale.mirbagheri@gmail.com>"]
license = "private"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg = "^3.1.10"
psycopg2 = "^2.9.7"
mimesis = "^10.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
